python/testData/highlighting/fStringCommentsBefore312.py
f'''{[
    42 <error descr="Python version 3.6 does not allow comments inside expression parts of f-strings"># foo</error>
]}'''
